# AIGuardSELab

./: .gitignore  Dockerfile  agent_core.py  aiguard_utils.py  api.py  app.py  docker-compose.yml  entrypoint.sh  pyproject.toml  readme.md  requirements.txt  streamlit_app.py
.chainlit/: config.toml
.streamlit/: config.toml
ollama/: dockerfile  entrypoint.sh
