[project]
name = "pythonproject"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "datasets>=4.5.0",
    "dotenv==0.9.9",
    "langchain>=1.2.10",
    "langchain-anthropic==1.3.4",
    "langchain-community>=0.4.1",
    "langchain-core==1.2.15",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-ollama>=1.0.1",
    "langchain-openai==1.1.10",
    "langgraph==1.0.9",
    "streamlit==1.54.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]
